# bulletproofs

./: .gitignore  Cargo.toml  Makefile
analysis/: all_constraints.csv  constraints.csv  cost.py  cost.sage  measure_constraints.zsh  measure_constraints_cross_curve.zsh  measure_constraints_small.zsh  model_constraints.R  pasta.sage
analysis/main/: Makefile  data.csv  plot.R  run.zsh
examples/: llbp.rs  measure_constraints.rs  msm_bench.rs
src/: compiler.rs  curves.rs  gen.rs  iter_bp.rs  k_bp.rs  lib.rs  msm.rs  rec_bp.rs  send.rs  snark.rs  util.rs
src/curves/: mod.rs
src/k_ary/: mod.rs  unroll.rs
src/proofs/: bp_iter.rs  bp_rec.rs  bp_rec_comb.rs  bp_rec_kary.rs  ipa_send.rs  llbp.rs  mod.rs
src/r1cs/: ip.rs  mod.rs  msm.rs
src/reductions/: bp_2ary_step.rs  bp_unroll_to_com_r1cs.rs  com_r1cs_to_ipa.rs  combinator.rs  ipa_send.rs  ipa_to_bp_unroll.rs  mod.rs
src/relations/: bp_unroll.rs  com_r1cs.rs  ipa.rs  mod.rs
src/util/: mod.rs  msm.rs
