[package]
name = "ark-bp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.3"
ark-ff = "0.3"
ark-std = "0.3"
ark-marlin = "0.3"

blake2 = "0.9"
rand = "0.8"

[dev-dependencies]
ark-bls12-381 = "0.3"

