[package]
name = "ark-bp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.3"
ark-ff = "0.3"
#ark-std = "0.3"
ark-std = { version = "0.3", default-features = false, features = [ "print-trace" ] }
ark-marlin = "0.3"
ark-r1cs-std = { version = "0.3", features = [] }
ark-relations = { version = "0.3", features = ["std"] }
#ark-nonnative-field = "0.3"
ark-nonnative-field = { git = "https://github.com/alex-ozdemir/nonnative.git", branch = "alloc-bits" }
ark-crypto-primitives = { version = "0.3" }

#vector-addition-chain = { path = "../vector-addition-chain" }
vector-addition-chain = { git = "https://github.com/alex-ozdemir/vector-addition-chain.git" }

blake2 = "0.9"
rand = "0.8"

[dev-dependencies]
ark-bls12-381 = "0.3"
ark-ed-on-bls12-381 = "0.3"

tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }

[profile.release]
debug = true
