[package]
name = "ark-bp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.3"
ark-ff = "0.3"
ark-std = { version = "0.3", default-features = false, features = [] }
#ark-std = { version = "0.3", default-features = false, features = [ "print-trace" ] }
ark-marlin = "0.3"
#ark-r1cs-std = { version = "0.3.1", features = [] }
ark-r1cs-std = { path = "../r1cs-std", features = [] }
ark-relations = { version = "0.3", features = ["std"] }
#ark-nonnative-field = "0.3"
#ark-nonnative-field = { git = "https://github.com/alex-ozdemir/nonnative.git", branch = "alloc-bits" }
ark-crypto-primitives = { version = "0.3" }

#vector-addition-chain = { path = "../vector-addition-chain" }
vector-addition-chain = { git = "https://github.com/alex-ozdemir/vector-addition-chain.git" }
derivative = "2.2.0"

blake2 = "0.9"
rand = "0.8"
ark-bls12-381 = "0.3"
ark-ed-on-bls12-381 = "0.3"
ark-pallas = "0.3"
ark-vesta = "0.3"
log = "0.4"

[dev-dependencies]

ark-nonnative-field = { path = "../ark-nonnative" }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }
structopt = { version = "0.3", default-features = false }
env_logger = "0.9"
#clap = "2.0"

[profile.release]
debug = true
